--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <link rel='stylesheet' href='index.css'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Movies App</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <title>Movie App</title>
   </head>
   <body>
     <div id="root"></div>
